# Jobstalker2

./: .gitignore  AI reusme builder.md  DATABASE_SCHEMA.md  DOMAIN_MIGRATION_GUIDE.md  Dockerfile  Frontend PRD - Job Application Tracker.md  GITHUB_OAUTH_SETUP.md  IMPLEMENTATION_TASKS.md  Jobstalker 2.md  LINKEDIN_OAUTH_SETUP_PRD.md  LOCALHOST_REDIRECT_FIX.md  RAILWAY.md  SYSTEM_ARCHITECTURE.md  TESTING_CHECKLIST.md  docker-compose.yml  env.example  fullstack-tasks-prd-.md  generate-tasks.mdc  nixpacks.toml  package-lock.json  package.json  prd-jobstalker-mvp.md  railway.toml  todo.md
backend/: .env  .gitignore  Dockerfile  Procfile  RAILWAY.md  README.md  README_SEED_TEMPLATE.md  check_and_create_tables.py  cleanup_templates.py  create_missing_tables.sql  create_tables.py  list_templates.py  main.py  models.py  pyproject.toml  railway.toml  requirements.txt  schema.sql  seed_clean_impact_template.py  seed_template.py  setup.py  setup_database.py  supabase_client.py
backend/migrations/: create_job_matching_preferences_temp.sql
backend/routes/: __init__.py  ai_extraction.py  ai_match.py  ai_resume.py  education.py  experience.py  job_matcher.py  jobs.py  languages.py  profile.py  skills.py  subscriptions.py  wizard.py
backend/utils/: currency_converter.py  dependencies.py  file_upload.py  job_extraction.py  openai_client.py  subscription.py  theirstack_client.py
extension folder/: .gitignore  README.md  ai-config.js  auth-check.js  auth-content.js  background.js  config.js  content.js  manifest.json  popup.html  popup.js  prd-extension.md  styles.css
(+182 files in other folders)
