[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "supabase>=2.17.0",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]
